more spacing issue fixed

--- a/style.css
+++ b/style.css
@@ -2400,6 +2400,11 @@ html {
   padding-bottom: 1.25rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
